# rustpy-toolkit

./: Cargo.toml  README.md  example_usage.py  main.py  pyproject.toml
.github/workflows/: CI.yml
expression_lib/: __init__.py
src/: cpf_cnpj.rs  expressions.rs  lib.rs  phone.rs  text_utils.rs
tests/: README.md  performance_test.py
