[package]
name = "expression_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "expression_lib"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.49.1" }
polars-arrow = "0.49.1"
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.22.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
