[package]
name = "rustpy-toolkit"
version = "0.1.0"
edition = "2021"
description = "High-performance Polars expressions for Brazilian document validation and text processing"
license = "MIT"
repository = "https://github.com/yourusername/rustpy-toolkit"
homepage = "https://github.com/yourusername/rustpy-toolkit"

[lib]
name = "rustpy_toolkit"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.49.1" }
polars-arrow = "0.49.1"
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.22.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
